--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
         </div>
         <div>
             <h1>Applications</h1>
+<div id="apps"> 
+    <div class="card">
+        <h4>Earthquake Map</h4>    
+        <img src="assets/images/earthquakemap.png" alt="Earthquake Map">
+    </div> <!-- Added closing div for the first card -->
+    
+    <div class="card">
+        <h4>Bellybutton Biodiversity Dashboard</h4>
+        <img src="/Users/cmatthews/Desktop/Data-Analyst/Projects/BellyButton_Analysis/website.png" alt="Bellybutton Biodiversity Dashboard">
+        <div class="info">
+            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">Website</a>
+            <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
+        </div>
+    </div> <!-- Added closing div for the second card -->
+</div>
+
             <div id="apps"> 
                <div class="card">
                 <h4>Earthquake Map</h4>    
