--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <div class="card">
         <h4>Bellybutton Biodiversity Dashboard</h4>
         <img src="/Users/cmatthews/Desktop/Data-Analyst/Projects/BellyButton_Analysis/website.png" alt="Bellybutton Biodiversity Dashboard">
+    </div>
+        
         <div class="info">
             <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">Website</a>
             <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
