--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <div class="card">
         <h4>Bellybutton Biodiversity Dashboard</h4>
-        <img src="/Users/cmatthews/Desktop/Data-Analyst/Projects/BellyButton_Analysis/website.png" alt="Bellybutton Biodiversity Dashboard">
+        <img src="assests/images/Belly Button Biovdiversity Dashboard" alt="Bellybutton Biodiversity Dashboard">
     </div>
         
         <div class="info">
