--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h1>Data Analyst</h1>
 
             <img id="me" src="assets/images/me.png" alt="Profile Image">
+            
 
             <h2>Objective</h2>
             <p>A motivated and analytical professional with a strong foundation in data analytics, seeking an entry-level position to leverage technical skills in data analysis, statistical modeling, and data visualization to support data-driven decision-making processes.</p>
@@ -104,7 +105,7 @@
        
 
         <div class="info">
-            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">Website</a>
+            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
             <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">Earthquake Website</a>
             <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
         </div>
