--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div id="aboutMe">
             <h1>Data Analyst</h1>
-
+            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
             <img id="me" src="assets/images/me.png" alt="Profile Image">
             
 
