--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
         <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
         
-        <h4>Bellybutton Biodiversity Dashboard</h4><a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
+        <h4>Bellybutton Biodiversity Dashboard</h4>
+        <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
         <img src="assets/images/Belly Button Biodiversity Dashboard.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
        
 
