--- a/index.html
+++ b/index.html
@@ -132,11 +132,9 @@
 
         <div>
             <h1>Contacts</h1>
-            <!-- Add contact information here -->
-<<<<<<< HEAD
-=======
->>>>>>> 14840c9 (index)
->>>>>>> temp-branch
+              <div class="contact info">
+                  <a href="caseyvmathhews@gmail.com">
+                  
         </div>
     </main>
 
