--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <p><strong>Data Analytics Bootcamp</strong><br>
                 University of Pennsylvania – Philadelphia, PA<br>
                 03/2024 – Present</p>
+            <p><strong>Bachelors of Fine Arts</strong><br>
+                University of Pennsylvania – Philadelphia, PA<br>
+                09/2016 – 05/2022</p>
             <ul>
                 <li>Gained proficiency in technologies including Excel, Python, JavaScript, SQL Databases, Tableau, and more.</li>
                 <li>Developed a professional portfolio showcasing a range of data projects, from statistical modeling to web-based interactive visualizations.</li>
