--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <p>Catherine Matthews</p>
+
     <title>Portfolio</title>
 </head>
 
