--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <p>Catherine Matthews</p>
+    <header>
+        <p class="name">Catherine Matthews</p>
+    </header>
     <main>
         <div id="aboutMe">
             <h1>Data Analyst</h1>
@@ -66,10 +68,9 @@
                 <li>Built VBA scripts in Excel to automate manual processes, significantly reducing time spent on repetitive tasks.</li>
                 <li>Applied statistical modeling techniques to analyze historic stock trends and predict future market behavior.</li>
             </ul>
-
             <!-- Inserted Image as a Clickable Icon -->
-            <a href="assets/images/Image9-2-24.png" target="_blank" rel="noopener noreferrer">
-                <img src="assets/images/Image9-2-24.png" alt="Analysis Image" class="small-icon">
+            <a href="assets/images/Image 9-2-24 at 4.50 PM.png" target="_blank" rel="noopener noreferrer">
+                <img src="assets/images/Image 9-2-24 at 4.50 PM.png" alt="Analysis Image" class="small-icon">
             </a>
 
             <h2>Experience</h2>
