--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
         <h4>Bellybutton Biodiversity Dashboard</h4>
         <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
         <img src="assets/images/Belly Button Biodiversity Dashboard.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
-       
 
+         <!-- VBA Analysis Section -->
+        <h4>VBA Analysis</h4>
+        <img src="assets/images/mockup.png" alt="VBA Analysis Screenshot" class="small-image">
         <div class="info">
             <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
             <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
