--- a/index.html
+++ b/index.html
@@ -70,10 +70,14 @@
                 <li>Built VBA scripts in Excel to automate manual processes, significantly reducing time spent on repetitive tasks.</li>
                 <li>Applied statistical modeling techniques to analyze historic stock trends and predict future market behavior.</li>
             </ul>
-            <!-- Inserted Image as a Clickable Icon -->
+
+            <!-- Inserted Images as Clickable Icons -->
             <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA" target="_blank" rel="noopener noreferrer">
                 <img src="assets/images/Image9-2-24.png" alt="Analysis Image" class="small-icon">
             </a>
+
+            <img src="assets/images/Screenshot-2024-09-03-at-11.06.21-AM.png" alt="Tax Bracket Analysis" class="small-image">
+            <img src="assets/images/mockup.png" alt="Stock Market Analysis" class="small-image">
 
             <h2>Experience</h2>
             <p><strong>Junior Data Analyst</strong><br>
@@ -113,9 +117,10 @@
         <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
         <img src="assets/images/Belly Button Biodiversity Dashboard.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
 
-         <!-- VBA Analysis Section -->
+        <!-- VBA Analysis Section -->
         <h4>VBA Analysis</h4>
-        <img src="assets/images/mockup.png" alt="VBA Analysis Screenshot" class="small-image">
+        <img src="assets/images/Image 9-2-24 at 4.50 PM.png" alt="VBA Analysis Screenshot" class="small-image">
+
         <div class="info">
             <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
             <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
