--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <span class='name'>*</span>
         <span class='name'>C</span>
         <span class='name'>a</span>
         <span class='name'>t</span>
@@ -20,7 +21,7 @@
         <span class='name'>i</span>
         <span class='name'>n</span>
         <span class='name'>e</span>
-        <span class='name'> </span>
+        <span class='name'>*</span>
         <span class='name'>M</span>
         <span class='name'>a</span>
         <span class='name'>t</span>
@@ -29,6 +30,7 @@
         <span class='name'>e</span>
         <span class='name'>w</span>
         <span class='name'>s</span>
+        <span class='name'>*</span>
     </header>
 
     <main>
