--- a/index.html
+++ b/index.html
@@ -15,35 +15,25 @@
     </header>
 
     <main>
-        <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank"
-            rel="noopener noreferrer">RESUME</a>
+        <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
         <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
 
         <div id="aboutMe">
             <figure id="me">
                 <figcaption>Catherine Matthews</figcaption>
                 <img src="assets/images/me.png" alt="Profile Image">
-
             </figure>
 
             <div id="details">
-
                 <h2>Objective</h2>
-                <p>A motivated and analytical professional with a strong foundation in data analytics, seeking an
-                    entry-level position to leverage technical skills in data analysis, statistical modeling, and data
-                    visualization to support data-driven decision-making processes.</p>
+                <p>A motivated and analytical professional with a strong foundation in data analytics, seeking an entry-level position to leverage technical skills in data analysis, statistical modeling, and data visualization to support data-driven decision-making processes.</p>
 
                 <h2>Education</h2>
                 <div class="details" id="education">
-                    <p><strong>Data Analytics Bootcamp</strong><br>
-                        University of Pennsylvania – Philadelphia, PA<br>
-                        03/2024 – Present</p>
+                    <p><strong>Data Analytics Bootcamp</strong><br> University of Pennsylvania – Philadelphia, PA<br> 03/2024 – Present</p>
                     <ul>
-                        <li>Gained proficiency in technologies including Excel, Python, JavaScript, SQL Databases,
-                            Tableau,
-                            and more.</li>
-                        <li>Developed a professional portfolio showcasing a range of data projects, from statistical
-                            modeling to web-based interactive visualizations.</li>
+                        <li>Gained proficiency in technologies including Excel, Python, JavaScript, SQL Databases, Tableau, and more.</li>
+                        <li>Developed a professional portfolio showcasing a range of data projects, from statistical modeling to web-based interactive visualizations.</li>
                         <li>Collaborated on group projects to solve real-world problems using data analytics.</li>
                     </ul>
                 </div>
@@ -52,12 +42,9 @@
                 <div class="details">
                     <ul>
                         <li><strong>Programming Languages</strong>: Python, JavaScript, HTML, CSS, SQL</li>
-                        <li><strong>Data Analysis</strong>: Excel (including VBA scripting), Pandas, NumPy, Matplotlib
-                        </li>
+                        <li><strong>Data Analysis</strong>: Excel (including VBA scripting), Pandas, NumPy, Matplotlib</li>
                         <li><strong>Databases</strong>: PostgreSQL, MongoDB</li>
-                        <li><strong>Data Visualization</strong>: Tableau, Matplotlib, HTML/CSS, JavaScript libraries
-                            (e.g.,
-                            Leaflet)</li>
+                        <li><strong>Data Visualization</strong>: Tableau, Matplotlib, HTML/CSS, JavaScript libraries (e.g., Leaflet)</li>
                         <li><strong>Web Development</strong>: HTML, CSS, JavaScript</li>
                         <li><strong>Other Tools</strong>: GitHub, JSON, APIs, Hadoop, Machine Learning basics</li>
                     </ul>
@@ -69,94 +56,69 @@
             <h2>Projects</h2>
 
             <!-- VBA Analysis -->
-            <p><strong>VBA Analysis</strong><br>
-                Excel Automation with VBA</p>
+            <p><strong>VBA Analysis</strong><br> Excel Automation with VBA</p>
             <ul>
-                <li>Built VBA scripts in Excel to automate manual processes, significantly reducing time spent on
-                    repetitive tasks.</li>
-                <li>Applied statistical modeling techniques to analyze historic stock trends and predict future market
-                    behavior.</li>
+                <li>Built VBA scripts in Excel to automate manual processes, significantly reducing time spent on repetitive tasks.</li>
+                <li>Applied statistical modeling techniques to analyze historic stock trends and predict future market behavior.</li>
             </ul>
 
             <!-- Leaflet Analysis -->
-            <p><strong>Leaflet Analysis</strong><br>
-                Data Visualization Application</p>
+            <p><strong>Leaflet Analysis</strong><br> Data Visualization Application</p>
             <ul>
-                <li>Developed an interactive data visualization web application using HTML, CSS, JavaScript, and Leaflet
-                    to map and analyze geographic data.</li>
+                <li>Developed an interactive data visualization web application using HTML, CSS, JavaScript, and Leaflet to map and analyze geographic data.</li>
                 <li>Integrated data from APIs and used Python for data cleaning and manipulation.</li>
                 <li>Created dynamic, user-friendly visualizations to showcase data insights.</li>
             </ul>
 
             <!-- Pymongo Analysis -->
-            <p><strong>Pymongo Analysis</strong><br>
-                SQL and MongoDB Data Management</p>
+            <p><strong>Pymongo Analysis</strong><br> SQL and MongoDB Data Management</p>
             <ul>
                 <li>Worked with PostgreSQL and MongoDB to manage and retrieve data efficiently.</li>
-                <li>Wrote complex SQL queries to perform CRUD operations and combined multiple datasets for
-                    comprehensive analysis.</li>
+                <li>Wrote complex SQL queries to perform CRUD operations and combined multiple datasets for comprehensive analysis.</li>
                 <li>Implemented ethical considerations in data handling, focusing on privacy and algorithmic bias.</li>
             </ul>
 
             <!-- Deep Learning Analysis -->
-            <p><strong>Deep Learning Analysis</strong><br>
-                Neural Networks and Model Performance Evaluation</p>
+            <p><strong>Deep Learning Analysis</strong><br> Neural Networks and Model Performance Evaluation</p>
             <ul>
-                <li>Developed deep learning models using TensorFlow and Keras to analyze complex datasets and extract
-                    meaningful insights.</li>
-                <li>Trained convolutional neural networks (CNNs) to classify images and applied various optimization
-                    techniques to improve model accuracy.</li>
-                <li>Utilized Recurrent Neural Networks (RNNs) and Long Short-Term Memory (LSTM) networks to predict
-                    time-series data.</li>
-                <li>Applied techniques such as dropout, batch normalization, and early stopping to prevent overfitting
-                    and ensure model generalization.</li>
-                <li>Evaluated model performance using metrics such as accuracy, precision, recall, and F1 score, and
-                    visualized the results using confusion matrices and ROC curves.</li>
-                <li><a href="https://colab.research.google.com/drive/1RZzi6cxJFrPP7xf0yd1YUuxEvt6ZY1uM"
-                        target="_blank">View Project on Google Colab</a></li>
-
-
+                <li>Developed deep learning models using TensorFlow and Keras to analyze complex datasets and extract meaningful insights.</li>
+                <li>Trained convolutional neural networks (CNNs) to classify images and applied various optimization techniques to improve model accuracy.</li>
+                <li>Utilized Recurrent Neural Networks (RNNs) and Long Short-Term Memory (LSTM) networks to predict time-series data.</li>
+                <li>Applied techniques such as dropout, batch normalization, and early stopping to prevent overfitting and ensure model generalization.</li>
+                <li>Evaluated model performance using metrics such as accuracy, precision, recall, and F1 score, and visualized the results using confusion matrices and ROC curves.</li>
+                <li><a href="https://colab.research.google.com/drive/1RZzi6cxJFrPP7xf0yd1YUuxEvt6ZY1uM" target="_blank">View Project on Google Colab</a></li>
             </ul>
 
-            </ul>
             <!-- Inserted Image as a Clickable Icon -->
-            <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA"
-                target="_blank" rel="noopener noreferrer">
+            <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA" target="_blank" rel="noopener noreferrer">
                 <img id="vba" src="assets/images/stocks.png" alt="Analysis Image" class="small-icon">
             </a>
         </div>
-    </main>
-    <main>
-        <h1>Applications</h1>
+
+        <h2>Applications</h2>
 
         <div id="apps">
             <div class="app">
                 <h4>Earthquake Map</h4>
-                <!-- Inserted Image as a Clickable Icon -->
-                <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html" target="_blank"
-                    rel="noopener noreferrer">
+                <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html" target="_blank" rel="noopener noreferrer">
                     <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
+                </a>
             </div>
 
             <div class="app">
                 <h4>Bellybutton Biodiversity Dashboard</h4>
-                <!-- Inserted Image as a Clickable Icon -->
                 <a href="https://mattcat1221.github.io/BellyButton_Analysis/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/images/Belly Button Biodiversity Dashboard.png"
-                        alt="Bellybutton Biodiversity Dashboard" class="small-image">
+                    <img src="assets/images/Belly Button Biodiversity Dashboard.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
                 </a>
             </div>
         </div>
-    </main>
 
-    <main>
         <div class="info">
-            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank"
-                rel="noopener noreferrer">RESUME</a>
+            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
             <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
         </div>
 
-        <h1>Contacts</h1>
+        <h2>Contacts</h2>
         <div class="contact info">
             <a href="mailto:caseyvmathhews@gmail.com">Email</a>
         </div>
