--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
             </ul>
 
             <!-- Inserted Image as a Clickable Icon -->
-            <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA" target="_blank" rel="noopener noreferrer">
-                <img id="vba" src="assets/images/stocks.png" alt="Analysis Image" class="small-icon">
+         <div class="app">
+            <h4>Cryptocurrencies</h4>
+            <a href ="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/" target="_blank" rel="noopener noreferrer">
+                <img src="assets/images/Untitled 2.jpg" alt="Crptocurrencies" class="small-image"> 
             </a>
         </div>
 
