--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <li><a href="https://colab.research.google.com/drive/1RZzi6cxJFrPP7xf0yd1YUuxEvt6ZY1uM" target="_blank">View Project on Google Colab</a></li>
             </ul>
 
+          <h2>Applications</h2>
             <!-- Inserted Image as a Clickable Icon -->
          <div class="app">
             <h4>Cryptocurrencies</h4>
