--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
         <h2>Applications</h2>
 
         <div id="apps">
+
+                    <div class="app">
+            <h4>Cryptocurrencies</h4>
+            <a href ="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/" target="_blank" rel="noopener noreferrer">
+            <img src="assets/images/Untitled 2.jpg" alt="Cryptocurrency" class="small-image">
+        </a>
+
             <div class="app">
                 <h4>Earthquake Map</h4>
                 <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html" target="_blank" rel="noopener noreferrer">
