--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="aboutMe">
             <figure id="me">
                 <figcaption>Catherine Matthews</figcaption>
-                <img src="assets/images/me.png" alt="Profile Image">
+                <img src="assets/images/me.png" alt=" Image">
             </figure>
 
             <div id="details">
@@ -88,26 +88,12 @@
                 <li>Evaluated model performance using metrics such as accuracy, precision, recall, and F1 score, and visualized the results using confusion matrices and ROC curves.</li>
                 <li><a href="https://colab.research.google.com/drive/1RZzi6cxJFrPP7xf0yd1YUuxEvt6ZY1uM" target="_blank">View Project on Google Colab</a></li>
             </ul>
-
-          <h2>Applications</h2>
-            <!-- Inserted Image as a Clickable Icon -->
-         <div class="app">
-            <h4>Cryptocurrencies</h4>
-            <a href ="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/" target="_blank" rel="noopener noreferrer">
-                <img src="assets/images/Untitled 2.jpg" alt="Crptocurrencies" class="small-image"> 
             </a>
         </div>
 
         <h2>Applications</h2>
 
         <div id="apps">
-
-                    <div class="app">
-            <h4>Cryptocurrencies</h4>
-            <a href ="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/" target="_blank" rel="noopener noreferrer">
-            <img src="assets/images/Untitled 2.jpg" alt="Cryptocurrency" class="small-image">
-        </a>
-
             <div class="app">
                 <h4>Earthquake Map</h4>
                 <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html" target="_blank" rel="noopener noreferrer">
@@ -121,6 +107,12 @@
                     <img src="assets/images/Belly Button Biodiversity Dashboard.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
                 </a>
             </div>
+        <div class="app">
+            <h4>Cryptocurrencies</h4>
+            <a href ="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/" target="_blank" rel="noopener noreferrer">
+            <img src="assets/images/Untitled 2.jpg" alt="Cryptocurrency" class="small-image">
+        </a>
+
         </div>
 
         <div class="info">
