--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
         <h2>Applications</h2>
         <div id="apps">
             <div class="app">
+                            <div class="app">
+                <h4></h4>
+                <a href="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/images/Untitled 2.jpg" alt="Cryptocurrency" class="small-image">
+                </a>
                 <h4>Cryptocurrency App</h4>
                 <a href="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/" target="_blank" rel="noopener noreferrer">
                     <img src="assets/images/Untitled 2.jpg" alt="Cryptocurrency" class="small-image">
