working on clickable links

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div>
                 <div class="details">
 
-                    <h2>Objective</h2>
-                    <div>
+                    <h2 id="objective">Objective</h2>
+                    <div class="h0">
 
                         <p>A motivated and analytical professional with a strong foundation in data analytics, seeking
                             an
@@ -38,8 +38,8 @@
                     </div>
                 </div>
                 <div class="details">
-                    <h2>Education</h2>
-                    <div>
+                    <h2 id="education">Education</h2>
+                    <div class="h0">
                         <p><strong>Data Analytics Bootcamp</strong><br>
                             University of Pennsylvania – Philadelphia, PA<br>
                             03/2024 – Present</p>
@@ -60,8 +60,8 @@
                 </div>
 
                 <div class="details">
-                    <h2>Technical Skills</h2>
-                    <div>
+                    <h2 id="skills">Technical Skills</h2>
+                    <div class="h0">
                         <ul>
                             <li><strong>Programming Languages</strong>: Python, JavaScript, SQL</li>
                             <li><strong>Data Analysis</strong>: Excel (including VBA scripting), Pandas, NumPy,
@@ -75,6 +75,8 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+        </div>
     </main>
 
     <main>
@@ -82,15 +84,51 @@
 
         <div id="apps">
             <div class="app">
-                <h4>Earthquake Map</h4>
-                <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
                 <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
+                <div class="info">
+                    <h4>Earthquake Map</h4>
+                    <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
+                </div>
             </div>
             <div class="app">
-                <h4>Bellybutton Biodiversity Dashboard</h4>
-                <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
                 <img src="assets/images/Belly Button Biodiversity Dashboard.png"
                     alt="Bellybutton Biodiversity Dashboard" class="small-image">
+                <div class="info">
+                    <h4>Bellybutton Biodiversity Dashboard</h4>
+                    <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
+
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
+                <div class="info">
+                    <h4>Earthquake Map</h4>
+                    <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/Belly Button Biodiversity Dashboard.png"
+                    alt="Bellybutton Biodiversity Dashboard" class="small-image">
+                <div class="info">
+                    <h4>Bellybutton Biodiversity Dashboard</h4>
+                    <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
+
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
+                <div class="info">
+                    <h4>Earthquake Map</h4>
+                    <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
+                </div>
+            </div>
+            <div class="app">
+                <img src="assets/images/Belly Button Biodiversity Dashboard.png"
+                    alt="Bellybutton Biodiversity Dashboard" class="small-image">
+                <div class="info">
+                    <h4>Bellybutton Biodiversity Dashboard</h4>
+                    <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
+                </div>
             </div>
         </div>
     </main>
