--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
                             09/2016 – 05/2022</p>
                         <ul>
                             <li>Gained proficiency in technologies including Excel, Python, JavaScript, SQL Databases,
-                                Tableau,
-                                and
-                                more.</li>
+                                Tableau, and more.</li>
                             <li>Developed a professional portfolio showcasing a range of data projects, from statistical
-                                modeling to
-                                web-based interactive visualizations.</li>
+                                modeling to web-based interactive visualizations.</li>
                             <li>Collaborated on group projects to solve real-world problems using data analytics.</li>
                         </ul>
                     </div>
@@ -64,12 +61,9 @@
                     <div class="h0">
                         <ul>
                             <li><strong>Programming Languages</strong>: Python, JavaScript, SQL</li>
-                            <li><strong>Data Analysis</strong>: Excel (including VBA scripting), Pandas, NumPy,
-                                Matplotlib</li>
+                            <li><strong>Data Analysis</strong>: Excel (including VBA scripting), Pandas, NumPy, Matplotlib</li>
                             <li><strong>Databases</strong>: PostgreSQL, MongoDB</li>
-                            <li><strong>Data Visualization</strong>: Tableau, Matplotlib, HTML/CSS, JavaScript libraries
-                                (e.g.,
-                                Leaflet)</li>
+                            <li><strong>Data Visualization</strong>: Tableau, Matplotlib, HTML/CSS, JavaScript libraries (e.g., Leaflet)</li>
                             <li><strong>Web Development</strong>: HTML, CSS, JavaScript</li>
                             <li><strong>Other Tools</strong>: GitHub, JSON, APIs, Hadoop, Machine Learning basics</li>
                         </ul>
@@ -96,47 +90,42 @@
                 <div class="info">
                     <h4>Bellybutton Biodiversity Dashboard</h4>
                     <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
-
                 </div>
             </div>
             <div class="app">
-                <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
+                <img src="assets/images/SDGI.jpg" alt="SDGi Map" class="small-image">
                 <div class="info">
-                    <h4>Earthquake Map</h4>
-                    <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
+                    <h4>Sustainable Development Growth Index Map</h4>
+                    <a href="https://mattcat1221.github.io/interactive_sdgi_map/">LIVE WEBSITE</a>
                 </div>
             </div>
             <div class="app">
-                <img src="assets/images/Belly Button Biodiversity Dashboard.png"
-                    alt="Bellybutton Biodiversity Dashboard" class="small-image">
+                <img src="assets/images/Crypto.png" alt="Bellybutton Biodiversity Dashboard" class="small-image">
                 <div class="info">
-                    <h4>Bellybutton Biodiversity Dashboard</h4>
-                    <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
-
+                    <h4>Cryptocurrency Dash</h4>
+                    <a href="https://crypto-clustering-analysis-811021pb3-caseys-projects-78b1de0d.vercel.app/">LIVE WEBSITE</a>
                 </div>
             </div>
             <div class="app">
-                <img src="assets/images/earthquakemap.png" alt="Earthquake Map" class="small-image">
+                <img src="assets/images/tableau.png" alt="Tableau Map" class="small-image">
                 <div class="info">
-                    <h4>Earthquake Map</h4>
-                    <a href="https://mattcat1221.github.io/Leaflet-Analysis/Leaflet-Step-2/index.html">LIVE WEBSITE</a>
+                    <h4>Tableau Analysis</h4>
+                    <a href="https://public.tableau.com/app/profile/catherine.matthews1724/viz/tableauanalysis_17209724886070/GroveSt_HourlyArrivalActivity">LIVE WEBSITE</a>
                 </div>
             </div>
             <div class="app">
-                <img src="assets/images/Belly Button Biodiversity Dashboard.png"
-                    alt="Bellybutton Biodiversity Dashboard" class="small-image">
+                <img src="assets/images/Untitled 3.jpg" alt="Credit Risk Classification" class="small-image">
                 <div class="info">
-                    <h4>Bellybutton Biodiversity Dashboard</h4>
-                    <a href="https://mattcat1221.github.io/BellyButton_Analysis/">LIVE WEBSITE</a>
+                    <h4>Credit Risk Classification Dash</h4>
+                    <a href="https://crcawebsite.vercel.app/LIVE WEBSITE</a>
                 </div>
             </div>
         </div>
     </main>
-    <main>
 
+    <main>
         <div class="info">
-            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank"
-                rel="noopener noreferrer">RESUME</a>
+            <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
             <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
         </div>
 
