working on skill bar

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 </div>
             </div>
         </div>
+
+        <div id="skillIcon">
+            
+        </div>
     </main>
 
     <main>
@@ -93,7 +97,7 @@
                 </div>
             </div>
             <div class="app">
-                <img src="assets/images/SDGI.jpg" alt="SDGi Map" class="small-image">
+                <img src="assets/images/sdgi.png" alt="SDGi Map" class="small-image">
                 <div class="info">
                     <h4>Sustainable Development Growth Index Map</h4>
                     <a href="https://mattcat1221.github.io/interactive_sdgi_map/">LIVE WEBSITE</a>
@@ -117,7 +121,7 @@
                 <img src="assets/images/Untitled 3.jpg" alt="Credit Risk Classification" class="small-image">
                 <div class="info">
                     <h4>Credit Risk Classification Dash</h4>
-                    <a href="https://crcawebsite.vercel.app/LIVE WEBSITE</a>
+                    <a href="https://crcawebsite.vercel.app/">LIVE WEBSITE</a>
                 </div>
             </div>
         </div>
@@ -128,7 +132,7 @@
             <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
             <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
         </div>
-
+</div></div>
         <h1>Contacts</h1>
         <div class="contact info">
             <a href="mailto:caseyvmathhews@gmail.com">Email</a>
