--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
         <span class="name">Data Analyst</span>
     </header>
 
-    <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
-
     <main>
         <div id="aboutMe">
 
             <figure>
                 <figcaption>Catherine Matthews</figcaption>
+                <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>/<a href="https://www.linkedin.com/in/catherine-matthews-110337232/" class="website" target="_blank" rel="noopener noreferrer">Linked In</a>/<a href="https://www.linkedin.com/in/catherine-matthews-110337232/" class="website" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <img id="me" src="assets/images/me.png" alt="Profile Image">
             </figure>
 
