--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                 </div>
             </div>
             <div class="app">
-                <img src="assets/images/Untitled 3.jpg" alt="Credit Risk Classification" class="small-image">
+                <img src="assets/images/stocks.png" alt="Credit Risk Classification" class="small-image">
                 <div class="info">
-                    <h4>Credit Risk Classification Dash</h4>
-                    <a href="https://crcawebsite.vercel.app/">LIVE WEBSITE</a>
+                    <h4>VBA Analysis</h4>
+                    <a href="https://1drv.ms/x/c/170bfacda3467f60/EYT8O2GbaftJtMaMFvEI_MUBJ-K-xX9CYBww4NudeL3CIA">LIVE WEBSITE</a>
                 </div>
             </div>
         </div>
