--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
             <figure>
                 <figcaption>Catherine Matthews</figcaption>
+                <p style="font-size: 20px;"></p>
                 <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>/<a href="https://www.linkedin.com/in/catherine-matthews-110337232/" class="website" target="_blank" rel="noopener noreferrer">Linked In</a>/<a href="https://www.linkedin.com/in/catherine-matthews-110337232/" class="website" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <img id="me" src="assets/images/me.png" alt="Profile Image">
             </figure>
