--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         <div class="info">
             <a href="https://mattcat1221.github.io/Resume/" class="website" target="_blank" rel="noopener noreferrer">RESUME</a>
             <a href="https://github.com/mattcat1221" class="github" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="https://www.linkedin.com/in/catherine-matthews-110337232/" class="website" target="_blank" rel="noopener noreferrer">linkedin</a>
         </div>
 </div></div>
         <h1>Contacts</h1>
